# Population

./: .gitignore  README.md  config.h  configure.ac  libtool  prepare.sh
docs/: algorithm.html  algorithm.md  algorithm.py  compile.sh  index.html  test  test_save  test_save.c  tutorial.md
docs/examples/: demo.ipynb  io.sh  tutorial.md
docs/examples/ex1/: ex1  ex1.c  test  test.c
docs/examples/ex1/mat/: out.csv
docs/examples/ex1b/: ex1b  ex1b.c
docs/examples/ex2/: ex2  ex2.c
docs/examples/ex2/mat/: out.csv
docs/examples/ex3/: den  ex3  ex3.c
docs/examples/ex3/mat/: out1.csv  out_eps.csv  out_sd
docs/examples/ex4/: ex4  ex4.c
docs/examples/ex4/mat/: out_sd.csv
docs/examples/ex5/: ex5  ex5.c
docs/examples/ex5/mat/: out.csv
docs/examples/ex6/: ex6  ex6.c
docs/examples/ex6/mat/: out1.csv  out3.csv
docs/examples/ex7/: ex7  ex7.c
docs/examples/ex7/mat/: out.csv
docs/examples/ex8/: ex8  ex8.c
docs/examples/ex8/mat/: out_det.csv  out_sto.csv
docs/examples/ex8b/: ex8b  ex8b.c
docs/examples/ex8b/mat/: out_det.csv  out_sto.csv
docs/examples/ex8c/: ex8c  ex8c.c
docs/examples/ex8c/mat/: out_det.csv  out_sto.csv
docs/examples/ex9/: den  ex9  ex9.c
docs/examples/save_state/: test.c
docs/examples/test/: den  test  test.c
docs/examples/wrappers/: demo_R.html  population.R
docs/wrappers/: demo_R.Rmd  model.c  population.py
docs/wrappers_depr/: model.dylib  population_old.py
ext/: demo_R.Rmd  demo_python.ipynb  model.c  model.dylib  population.R  population.py
population-0.0.2/: Makefile.am  config.h.in  configure
population-0.0.2/src/lib/: gamma.c  population.c  population.h
src/lib/: Makefile.am  libpopulation.la  population.c  population.h  population.lo  ran_gen.c  test.c
src/lib/.libs/: libpopulation.0.dylib  libpopulation.dylib  libpopulation.la  libpopulation.lai
(+16 files in other folders)
